src/objects/umKBDataCategory__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>dataCategoryGroup__c</fullName>
        <description>Data category group.</description>
        <inlineHelpText>Data category group.</inlineHelpText>
        <label>Data Category Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataCategory__c</fullName>
        <description>Top Level Data category.</description>
        <inlineHelpText>Top Level Data category.</inlineHelpText>
        <label>Top Level Data Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicName__c</fullName>
        <label>Public Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>umSite_id__c</fullName>
        <description>Id of the parent (umSite custom setting).</description>
        <inlineHelpText>Id of the parent (umSite custom setting).</inlineHelpText>
        <label>umSite Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>umKBDataCategory</label>
</CustomObject>